# single-use-dns

./: Cargo.toml  README.md
src/: main.rs
